<resources>
    <string name="app_name">FormularioCoursera</string>
    <string name="nombre_completo">Nombre completo</string>
    <string name="tel_fono">Teléfono</string>
    <string name="email">Email</string>
    <string name="descripci_n_del_contacto">Descripción del contacto</string>
    <string name="siguiente">Siguiente</string>
    <string name="confirmar_datos">Confirmar Datos</string>
    <string name="editar_datos">Editar Datos</string>
</resources>